<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cultural Retriever</string>
    <string name="edit_username_message">username</string>
    <string name="edit_password_message">password</string>
    <string name="action_settings">Settings</string>
    <string name="first_paragraph">Cultural Retriever</string>
    <string name="button_go">Go</string>
    <string name="button_go_active">Go Active</string>
    <string name="action_goActive">Go Active</string>
    <string name="title_GoActive">Go Active</string>
    <string name="button_landmark_it">Landmark it</string>
    <string name="action_landmarkIt">Landmark it</string>
    <string name="button_signup">-get account-</string>
    <string name="action_search">Search App</string>
    <string name="action_home">Home</string>
    <string name="title_activity_go_active">GoActive</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_landmark_it">LandmarkIt</string>
    <string name="prompt_landmark_descripion">Description:</string>
    <string name="default_landmark_description">What\'s so special about this place?</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="button_submit_landmark">Submit</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="authors">Patrick McElvaney\nMatt Landen\nNasif Sikder</string>
    <string name="title_activity_splash">SPLASH</string>
    <string name="title_activity_main_flipper">MainFlipper</string>
    <string name="title_activity_slider_preferences">SliderPreferences</string>
    <string name="title_activity_sqlconnect">SQLconnect</string>
    <string name="date_view_set">If this landmark is not permanent, 
           set the expiration date: </string>
    <string name="date_button_set">Set Date</string>
    <string name="date_selected"></string>
    <string name="title_activity_sqlrequest">SQLRequest</string>
    <string name="title_activity_main_photo_uploader">MainPhotoUploader</string>
    <string name="button_view_map">View Map</string>
    <string name="title_activity_explore">Explore</string>

</resources>