<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" 
    android:background="@drawable/project2_background" >

    <Button
        android:id="@+id/button_view_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="viewMap"
        android:text="@string/button_view_map" />
    
    <Button
        android:id="@+id/button_go_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="goActive"
        android:text="@string/button_go_active" />

    <ViewFlipper
        android:id="@+id/maincontainer"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"  >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/button_go_active"
            android:onClick="goActive"
            android:src="@drawable/ic_action_go_active"
             />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/button_landmark_it"
            android:onClick="goLandmarkIt"
            android:src="@drawable/ic_action_landmark_it" />
    </ViewFlipper>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="goLandmarkIt"
        android:text="@string/button_landmark_it" />

</RelativeLayout>